# Modulo-65

./: README.md  db.sqlite3  pyproject.toml
api/: models.py  serializers.py  tests.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_rename_title_product_name_category_active_and_more.py
django_serializers/: asgi.py  settings.py  urls.py
