[tool.poetry]
name = "65"
version = "0.1.0"
description = ""
authors = ["Kaio Grativol Baldo <78832356+KaioGBaldo@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^6.0.4"
djangorestframework = "^3.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest-django (>=4.12.0,<5.0.0)"
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "django_serializers.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
